COMPILER/hw4/myCompilerParser.java
// $ANTLR 3.5.1 myCompiler.g 2014-06-20 21:29:22

    // import packages here.
    import java.util.HashMap;
    import java.util.ArrayList;
    import java.util.Stack;
    import java.util.Queue;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCompilerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHAR", "COMMENT", "EscapeSequence", 
		"FLOAT", "Floating_point_constant", "IF", "INT", "Identifier", "Integer_constant", 
		"STRING_LITERAL", "VOID", "WS", "'('", "')'", "'*'", "'+'", "','", "'-'", 
		"'/'", "';'", "'='", "'['", "']'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int CHAR=4;
	public static final int COMMENT=5;
	public static final int EscapeSequence=6;
	public static final int FLOAT=7;
	public static final int Floating_point_constant=8;
	public static final int IF=9;
	public static final int INT=10;
	public static final int Identifier=11;
	public static final int Integer_constant=12;
	public static final int STRING_LITERAL=13;
	public static final int VOID=14;
	public static final int WS=15;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCompilerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCompilerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCompilerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myCompiler.g"; }


	    boolean TRACEON = false;
	    HashMap<String,Integer> symtab = new HashMap<String,Integer>();
	    int labelCount = 0;
	    String Reg[] = {"eax", "ecx", "edx","ebx", "r8d", "r9d", "r10d", "r11d", "r12d", "r13d", "r14d", "r15d"};

		  /*
	    public enum TypeInfo {
	    StringConstant,
	    Integer,
			Float,
			Unknown,
			No_Exist,
			Error
	    }
	    */

	    /* attr_type:
	       1 => integer,
	       2 => float,
	       3 => String constant,
	       -1 => do not exist,
	       -2 => error
	     */
	     
	    List<String> DataCode = new ArrayList<String>();
	    List<String> TextCode = new ArrayList<String>();
	 
	    public static register reg = new register(0, 10);

	    
	    /*
	     * Output prologue.
	     */
	    void prologue(String id)
	    {
	       TextCode.add("\n\n/* Text section */");
	       TextCode.add("\t.section .text");
	       TextCode.add("\t.global " + id);
	       TextCode.add("\t.type " + id + ",@function");
	       TextCode.add(id + ":");
	       
	       /* Follow x86 calling convention */
	       TextCode.add("\t pushq %rbp");
	       TextCode.add("\t movq %rsp,%rbp");
	       TextCode.add("\t pushq %rbx"); //callee saved registers.
	       TextCode.add("\t pushq %r12"); //callee saved registers.
	       TextCode.add("\t pushq %r13"); //callee saved registers.
	       TextCode.add("\t pushq %r14"); //callee saved registers.
	       TextCode.add("\t pushq %r15"); //callee saved registers.
	       TextCode.add("\t subq $8,%rsp\n"); // aligned 16-byte boundary.
	    }
	    
	    /*
	     * Output epilogue.
	     */
	    void epilogue()
	    {
	       /* handle epilogue */
	       
	       /* Follow x86 calling convention */
	       TextCode.add("\n\t addq $8,%rsp");
	       TextCode.add("\t popq %r15");
	       TextCode.add("\t popq %r14");
	       TextCode.add("\t popq %r13");
	       TextCode.add("\t popq %r12");
	       TextCode.add("\t popq %rbx");
	       TextCode.add("\t popq %rbp");
	       TextCode.add("\t ret");
	    }
	    
	    
	    /* Generate a new label */
	    String newLabel()
	    {
	       labelCount ++;
	       return (new String("L")) + Integer.toString(labelCount);
	    } 
	    
	    
	    public List<String> getDataCode()
	    {
	       return DataCode;
	    }
	    
	    public List<String> getTextCode()
	    {
	       return TextCode;
	    }



	// $ANTLR start "program"
	// myCompiler.g:107:1: program : declarations functions ;
	public final void program() throws RecognitionException {
		try {
			// myCompiler.g:108:5: ( declarations functions )
			// myCompiler.g:108:7: declarations functions
			{
			pushFollow(FOLLOW_declarations_in_program43);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_functions_in_program45);
			functions();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "functions"
	// myCompiler.g:112:1: functions : ( function functions |);
	public final void functions() throws RecognitionException {
		try {
			// myCompiler.g:113:5: ( function functions |)
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==CHAR||LA1_0==FLOAT||LA1_0==INT||LA1_0==VOID) ) {
				alt1=1;
			}
			else if ( (LA1_0==EOF) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// myCompiler.g:113:7: function functions
					{
					pushFollow(FOLLOW_function_in_functions63);
					function();
					state._fsp--;

					pushFollow(FOLLOW_functions_in_functions65);
					functions();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:115:5: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functions"



	// $ANTLR start "function"
	// myCompiler.g:117:1: function : type Identifier '(' ')' '{' l_declarations statements '}' ;
	public final void function() throws RecognitionException {
		Token Identifier1=null;

		try {
			// myCompiler.g:118:5: ( type Identifier '(' ')' '{' l_declarations statements '}' )
			// myCompiler.g:118:7: type Identifier '(' ')' '{' l_declarations statements '}'
			{
			pushFollow(FOLLOW_type_in_function94);
			type();
			state._fsp--;

			Identifier1=(Token)match(input,Identifier,FOLLOW_Identifier_in_function96); 
			match(input,16,FOLLOW_16_in_function98); 
			match(input,17,FOLLOW_17_in_function100); 
			match(input,27,FOLLOW_27_in_function102); 

			         /* output function prologue */
			         prologue((Identifier1!=null?Identifier1.getText():null));
			      
			pushFollow(FOLLOW_l_declarations_in_function118);
			l_declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_function120);
			statements();
			state._fsp--;

			match(input,28,FOLLOW_28_in_function122); 

				     if (TRACEON)
					     System.out.println("type Identifier () {declarations statements}");
				    
					 /* output function epilogue */	  
				     epilogue();
				  
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "function"



	// $ANTLR start "declarations"
	// myCompiler.g:135:1: declarations : ( type Identifier ';' declarations | type Identifier '[' Integer_constant ']' ';' declarations |);
	public final void declarations() throws RecognitionException {
		Token Identifier2=null;
		Token Identifier4=null;
		int type3 =0;
		int type5 =0;

		try {
			// myCompiler.g:136:5: ( type Identifier ';' declarations | type Identifier '[' Integer_constant ']' ';' declarations |)
			int alt2=3;
			switch ( input.LA(1) ) {
			case INT:
				{
				int LA2_1 = input.LA(2);
				if ( (LA2_1==Identifier) ) {
					switch ( input.LA(3) ) {
					case 23:
						{
						alt2=1;
						}
						break;
					case 25:
						{
						alt2=2;
						}
						break;
					case 16:
						{
						alt2=3;
						}
						break;
					default:
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT:
				{
				int LA2_2 = input.LA(2);
				if ( (LA2_2==Identifier) ) {
					switch ( input.LA(3) ) {
					case 23:
						{
						alt2=1;
						}
						break;
					case 25:
						{
						alt2=2;
						}
						break;
					case 16:
						{
						alt2=3;
						}
						break;
					default:
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case VOID:
				{
				int LA2_3 = input.LA(2);
				if ( (LA2_3==Identifier) ) {
					switch ( input.LA(3) ) {
					case 23:
						{
						alt2=1;
						}
						break;
					case 25:
						{
						alt2=2;
						}
						break;
					case 16:
						{
						alt2=3;
						}
						break;
					default:
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
				{
				int LA2_4 = input.LA(2);
				if ( (LA2_4==Identifier) ) {
					switch ( input.LA(3) ) {
					case 23:
						{
						alt2=1;
						}
						break;
					case 25:
						{
						alt2=2;
						}
						break;
					case 16:
						{
						alt2=3;
						}
						break;
					default:
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 6, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case EOF:
				{
				alt2=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// myCompiler.g:137:4: type Identifier ';' declarations
					{
					pushFollow(FOLLOW_type_in_declarations150);
					type3=type();
					state._fsp--;

					Identifier2=(Token)match(input,Identifier,FOLLOW_Identifier_in_declarations152); 
					match(input,23,FOLLOW_23_in_declarations154); 
					pushFollow(FOLLOW_declarations_in_declarations156);
					declarations();
					state._fsp--;

					 
						    if (TRACEON) System.out.println("declarations: type Identifier : declarations");
							if (symtab.containsKey((Identifier2!=null?Identifier2.getText():null))) {
							    System.out.println("Type Error: " + 
									                Identifier2.getLine() + 
												    ": Redeclared identifier.");
						    } else {
								/* Add ID and its attr_type into the symbol table. */
								symtab.put((Identifier2!=null?Identifier2.getText():null), type3);	   
						    }
							
							/* code generation */
							switch(type3) {
							case 1: /* Type: integer, size=> 4 bytes, alignment=> 4 byte boundary. */
							        DataCode.add("\t .common " + (Identifier2!=null?Identifier2.getText():null) + ",4,4\n");
									break;
							case 2: /* Type: float, size=> 4 bytes, alignment=> 4 byte boundary. */
							        DataCode.add("\t .common " + (Identifier2!=null?Identifier2.getText():null) + ",4,4\n");
									break;
							default:
							}
						  
					}
					break;
				case 2 :
					// myCompiler.g:160:6: type Identifier '[' Integer_constant ']' ';' declarations
					{
					pushFollow(FOLLOW_type_in_declarations171);
					type5=type();
					state._fsp--;

					Identifier4=(Token)match(input,Identifier,FOLLOW_Identifier_in_declarations173); 
					match(input,25,FOLLOW_25_in_declarations175); 
					match(input,Integer_constant,FOLLOW_Integer_constant_in_declarations177); 
					match(input,26,FOLLOW_26_in_declarations179); 
					match(input,23,FOLLOW_23_in_declarations181); 
					pushFollow(FOLLOW_declarations_in_declarations183);
					declarations();
					state._fsp--;

					 
						    if (TRACEON) System.out.println("declarations: type Identifier : declarations");
							if (symtab.containsKey((Identifier4!=null?Identifier4.getText():null))) {
							    System.out.println("Type Error: " + 
									                Identifier4.getLine() + 
												    ": Redeclared identifier.");
						    } else {
								/* Add ID and its attr_type into the symbol table. */
								symtab.put((Identifier4!=null?Identifier4.getText():null), type5);	   
						    }
							
							/* code generation */
							switch(type5) {
							case 1: /* Type: integer, size=> 4 bytes, alignment=> 4 byte boundary. */
							        DataCode.add("\t .common " + (Identifier4!=null?Identifier4.getText():null) + ",12,4\n");
									break;
							case 2: /* Type: float, size=> 4 bytes, alignment=> 4 byte boundary. */
							        DataCode.add("\t .common " + (Identifier4!=null?Identifier4.getText():null) + ",12,4\n");
									break;
							default:
							}
						  
					}
					break;
				case 3 :
					// myCompiler.g:183:6: 
					{
					 if (TRACEON) System.out.println("declarations: ");
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "l_declarations"
	// myCompiler.g:187:1: l_declarations : ( type Identifier ';' l_declarations |);
	public final void l_declarations() throws RecognitionException {
		Token Identifier6=null;
		int type7 =0;

		try {
			// myCompiler.g:188:5: ( type Identifier ';' l_declarations |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==CHAR||LA3_0==FLOAT||LA3_0==INT||LA3_0==VOID) ) {
				alt3=1;
			}
			else if ( (LA3_0==IF||LA3_0==Identifier||LA3_0==28) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// myCompiler.g:189:5: type Identifier ';' l_declarations
					{
					pushFollow(FOLLOW_type_in_l_declarations220);
					type7=type();
					state._fsp--;

					Identifier6=(Token)match(input,Identifier,FOLLOW_Identifier_in_l_declarations222); 
					match(input,23,FOLLOW_23_in_l_declarations224); 
					pushFollow(FOLLOW_l_declarations_in_l_declarations226);
					l_declarations();
					state._fsp--;


						if (TRACEON) System.out.println("declarations: type Identifier : declarations");

					           if (symtab.containsKey((Identifier6!=null?Identifier6.getText():null))) {
					                   System.out.println("Type Error: " +
					                                              Identifier6.getLine() +
					                                                          ": Redeclared identifier.");
					           } else {
					                   /* Add ID and its attr_type into the symbol table. */
					                   symtab.put((Identifier6!=null?Identifier6.getText():null), type7);
					           }

							switch(type7) {
					                case 1: /* Type: integer, size=> 4 bytes, alignment=> 4 byte boundary. */
					                        DataCode.add("\t .common " + (Identifier6!=null?Identifier6.getText():null) + ",4,4\n");
					                                break;
					                case 2: /* Type: float, size=> 4 bytes, alignment=> 4 byte boundary. */
					                        DataCode.add("\t .common " + (Identifier6!=null?Identifier6.getText():null) + ",4,4\n");
					                                break;
					                default:
							}
					     
					}
					break;
				case 2 :
					// myCompiler.g:212:7: 
					{
					 if (TRACEON) System.out.println("declarations: ");
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "l_declarations"



	// $ANTLR start "type"
	// myCompiler.g:216:1: type returns [int attr_type] : ( INT | FLOAT | VOID | CHAR );
	public final int type() throws RecognitionException {
		int attr_type = 0;


		try {
			// myCompiler.g:217:5: ( INT | FLOAT | VOID | CHAR )
			int alt4=4;
			switch ( input.LA(1) ) {
			case INT:
				{
				alt4=1;
				}
				break;
			case FLOAT:
				{
				alt4=2;
				}
				break;
			case VOID:
				{
				alt4=3;
				}
				break;
			case CHAR:
				{
				alt4=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}
			switch (alt4) {
				case 1 :
					// myCompiler.g:217:7: INT
					{
					match(input,INT,FOLLOW_INT_in_type262); 
					 if (TRACEON) System.out.println("type: INT");  attr_type =1; 
					}
					break;
				case 2 :
					// myCompiler.g:218:7: FLOAT
					{
					match(input,FLOAT,FOLLOW_FLOAT_in_type274); 
					 if (TRACEON) System.out.println("type: FLOAT");  attr_type =2; 
					}
					break;
				case 3 :
					// myCompiler.g:219:7: VOID
					{
					match(input,VOID,FOLLOW_VOID_in_type284); 
					}
					break;
				case 4 :
					// myCompiler.g:220:7: CHAR
					{
					match(input,CHAR,FOLLOW_CHAR_in_type292); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return attr_type;
	}
	// $ANTLR end "type"



	// $ANTLR start "statements"
	// myCompiler.g:223:1: statements : ( statement statements |);
	public final void statements() throws RecognitionException {
		try {
			// myCompiler.g:223:11: ( statement statements |)
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==IF||LA5_0==Identifier) ) {
				alt5=1;
			}
			else if ( (LA5_0==28) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// myCompiler.g:223:13: statement statements
					{
					pushFollow(FOLLOW_statement_in_statements304);
					statement();
					state._fsp--;

					pushFollow(FOLLOW_statements_in_statements306);
					statements();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:225:5: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statements"



	// $ANTLR start "statement"
	// myCompiler.g:227:1: statement returns [int attr_type] : ( Identifier '=' arith_expression ';' | Identifier '[' Integer_constant ']' '=' arith_expression ';' | IF '(' arith_expression ')' if_then_statements | Identifier func_argument );
	public final int statement() throws RecognitionException {
		int attr_type = 0;


		Token Identifier8=null;
		Token Identifier10=null;
		Token Identifier13=null;
		ParserRuleReturnScope arith_expression9 =null;
		ParserRuleReturnScope arith_expression11 =null;
		String func_argument12 =null;

		try {
			// myCompiler.g:228:5: ( Identifier '=' arith_expression ';' | Identifier '[' Integer_constant ']' '=' arith_expression ';' | IF '(' arith_expression ')' if_then_statements | Identifier func_argument )
			int alt6=4;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==Identifier) ) {
				switch ( input.LA(2) ) {
				case 24:
					{
					alt6=1;
					}
					break;
				case 25:
					{
					alt6=2;
					}
					break;
				case IF:
				case Identifier:
				case 16:
				case 28:
					{
					alt6=4;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
			}
			else if ( (LA6_0==IF) ) {
				alt6=3;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}
